Request 'all urls' permissions in order to be able to inject scripts

--- a/manifest.json
+++ b/manifest.json
@@ -17,6 +17,7 @@
         "128": "icons/icon-128.png"
     },
     "permissions": [
+        "<all_urls>",
         "activeTab",
         "storage",
         "tabs"
