--- a/manifest.json
+++ b/manifest.json
@@ -1,14 +1,12 @@
 {
     "manifest_version": 2,
-    "name": "Page Translator",
-    "version": "1.0.5",
-    "author": "Jeremiah Lee",
+    "name": "Page Translator Revised",
+    "version": "2019.1.2",
     "developer": {
-        "name": "Jeremiah Lee",
-        "url": "https://www.jeremiahlee.com/"
+        "name": "Mathnerd314",
+        "url": "https://github.com/Mathnerd314/page-translator"
     },
-    "description": "Translate any page using Google Translate or Microsoft Translator.\n\n***New in version 1.0.5***\n\nAdded option to automatically insert Google Translate or Microsoft Translator when a foreign language is detected",
-    "homepage_url": "https://github.com/jeremiahlee/page-translator/",
+    "description": "Translate any page using Google Translate or Microsoft Translator.",
     "icons": {
         "16": "icons/icon-16.png",
         "32": "icons/icon-32.png",
@@ -35,8 +33,8 @@
     },
     "applications": {
         "gecko": {
-            "id": "{79f4bfc6-b1da-4dc4-85cc-ecbcc5dd152e}",
-            "update_url": "https://raw.githubusercontent.com/jeremiahlee/page-translator/master/updates.json"
+            "id": "page-translator-revised@mathnerd314.github.com",
+            "update_url": "https://raw.githubusercontent.com/Mathnerd314/page-translator/master/updates.json"
         }
     }
 }
