Add context menu option Fix back button when automatically translating Add auto-detect language option using Firefox

--- a/manifest.json
+++ b/manifest.json
@@ -16,7 +16,8 @@
     },
     "permissions": [
         "storage",
-        "tabs"
+        "tabs",
+	    "menus"
     ],
     "page_action": {
         "browser_style": true,
